ISTO-143 Other elasticsearch 10K fixes.